# MAAtools

./: Action.cpp  App.axaml  App.axaml.cs  Arknights.cpp  CMakeLists.txt  LICENSE.md  MAACoreAPI.cpp  MAAEntity_Controller.cpp  MAAEntity_Init.cpp  MAAEntity_Resource.cpp  MAAEntity_Tasker.cpp  MAAtools.csproj  MAAtools.sln  Program.cs  README.md  Test.cpp  ViewLocator.cs  app.manifest
.nicegui/: storage-general.json
API/: IMAAToolsAPI.cs
Models/: Page1Models.cs  PageModelBase.cs
Services/: MAAtoolsAPI.cs
Test/: EcosystemSimulationCore.cpp  MAAEntity_C.CPP  MAATest2.cpp  Sample_main1.cpp  Test1.cpp  Test3.cpp  jsonTest.cpp
Utilities/: RelayCommand.cs
ViewModels/: MainWindowViewModel.cs  Page1ViewModel.cs  ViewModelBase.cs
Views/: MainWindow.axaml  MainWindow.axaml.cs  NoticeWindow.axaml  NoticeWindow.axaml.cs  Page1.axaml  Page1.axaml.cs  Page2.axaml  Page2.axaml.cs  Page3.axaml  Page3.axaml.cs  Settings.axaml  Settings.axaml.cs
include/MAACoreInclude/: Core.h  MAAEntity_Controller.h  MAAEntity_Init.h  MAAEntity_Resource.h  MAAEntity_Tasker.h
interface/: MAA_DLL.cs  MAA_Test.cs  implementation.cs
